# yeet

./: pyproject.toml
yeet/: main.py
